--- a/TranXuanTruong_22688851_Lab06/lab06/package.json
+++ b/TranXuanTruong_22688851_Lab06/lab06/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "datatables.net-dt": "^2.2.2",
+    "json-server": "^0.17.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
